@@ -2,6 +2,15 @@
 
         * lilypond-mode.el: Add each word to regexps only once.
 
+	* lilypond-mode.el (LilyPond-insert-tag): add new function, which 
+	is based on the syntax definitions in lilypond.words. Remove all 
+	LilyPond-insert-tag-* functions. Restructure LilyPond menu. 
+	LilyPond->Insert menu is generated by the entries in lilypond.words 
+	to which have been given a syntax definition.
+
+	* lilypond.words: give syntax definitions (LilyPond-insert-tag) for 
+	\notes, \relative, \score, \simultaneous, \transpose.
+
 2003-08-01  Mats Bengtsson  <mats.bengtsson@s3.kth.se>
 
 	* Documentation/topdocs/INSTALL.texi (Top): Documentation of the
